--- a/index.html
+++ b/index.html
@@ -3,95 +3,36 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Пошук друга (Realtime DB)</title>
+  <title>Пошук друга (Realtime Database)</title>
 
   <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
-<style>
-  body {
-  font-family: Arial, sans-serif;
-  background: #f4f4f4;
-  margin: 0;
-  padding: 40px;
-  color: #222;
-}
-
-.container {
-  max-width: 500px;
-  margin: auto;
-  background: white;
-  padding: 25px 30px;
-  border-radius: 10px;
-  box-shadow: 0 0 10px #ccc;
-}
-
-h1 {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-input[type="text"] {
-  width: 100%;
-  padding: 12px;
-  margin-bottom: 15px;
-  border-radius: 6px;
-  border: 1px solid #ccc;
-  font-size: 16px;
-}
-
-.checkbox-group label {
-  display: block;
-  margin-bottom: 8px;
-  cursor: pointer;
-  font-size: 15px;
-}
-
-button {
-  width: 100%;
-  background-color: #0077cc;
-  color: white;
-  padding: 12px;
-  border: none;
-  border-radius: 6px;
-  font-size: 16px;
-  cursor: pointer;
-  margin-top: 15px;
-  transition: background-color 0.3s ease;
-}
-
-button:hover {
-  background-color: #005fa3;
-}
-
-#profiles {
-  margin-top: 20px;
-}
-
-.profile-card {
-  background: #e6f7ff;
-  margin-bottom: 12px;
-  padding: 12px;
-  border-radius: 6px;
-  box-shadow: 0 0 4px #cce7ff;
-  }
-</style>
+  
+  <style>
+    body { font-family: Arial, sans-serif; max-width: 600px; margin: 20px auto; }
+    form label { margin-right: 10px; }
+    #profiles div { margin: 5px 0; padding: 8px; background: #f0f0f0; border-radius: 4px; }
+  </style>
 </head>
 <body>
-  <h1>Знайди друга (Realtime Database)</h1>
+  <h1>Знайди друга</h1>
 
   <form id="friend-form">
-    <input id="name" placeholder="Введи ім'я" />
+    <input id="name" placeholder="Введи ім'я" required />
+    <br /><br />
     <label><input type="checkbox" name="interests" value="музика" /> Музика</label>
     <label><input type="checkbox" name="interests" value="спорт" /> Спорт</label>
     <label><input type="checkbox" name="interests" value="ігри" /> Ігри</label>
+    <br /><br />
     <button type="submit">Відправити</button>
   </form>
 
-  <div id="profiles"></div>
+  <h2>Збіги</h2>
+  <div id="profiles">Поки що немає друзів.</div>
 
   <script>
-    // Твій firebaseConfig тут
+    // Встав сюди свій firebaseConfig з Firebase Console!
     const firebaseConfig = {
       apiKey: "AIzaSyDAwt16j3J0mgZx6qv7i1CGyFlhUbhmm74",
   authDomain: "blog-9cbee.firebaseapp.com",
@@ -103,40 +44,14 @@ button:hover {
   measurementId: "G-P2F2G00FCP"
     };
 
-    // Ініціалізація Firebase
+    // Ініціалізуємо Firebase
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
 
     const form = document.getElementById("friend-form");
     const profilesDiv = document.getElementById("profiles");
 
-    form.addEventListener("submit", e => {
-      e.preventDefault();
-
-      const name = document.getElementById("name").value.trim();
-      const selectedInterests = [...document.querySelectorAll('input[name="interests"]:checked')]
-                                .map(el => el.value);
-
-      if (!name) return alert("Введи ім'я!");
-      if (selectedInterests.length === 0) return alert("Оберіть хоча б один інтерес!");
-
-      // Записуємо новий профіль у Realtime DB
-      const newProfileRef = db.ref("profiles").push();
-      newProfileRef.set({
-        name: name,
-        interests: selectedInterests,
-        createdAt: Date.now()
-      }, error => {
-        if (error) {
-          alert("Помилка збереження: " + error);
-        } else {
-          form.reset();
-          loadProfiles(selectedInterests);
-        }
-      });
-    });
-
-    // Завантажуємо і показуємо профілі
+    // Функція завантаження та фільтрації профілів
     function loadProfiles(filterInterests = []) {
       profilesDiv.textContent = "Завантаження...";
 
@@ -149,7 +64,6 @@ button:hover {
           return;
         }
 
-        // Фільтруємо профілі за інтересами
         const profiles = Object.values(data).filter(profile => {
           if (filterInterests.length === 0) return true;
           return profile.interests.some(i => filterInterests.includes(i));
@@ -160,16 +74,47 @@ button:hover {
           return;
         }
 
-        // Відображаємо профілі
         profiles.forEach(profile => {
           const div = document.createElement("div");
-          div.textContent = profile.name + " — " + profile.interests.join(", ");
+          div.textContent = `${profile.name} — ${profile.interests.join(", ")}`;
           profilesDiv.appendChild(div);
         });
       });
     }
 
-    // Показати всіх при завантаженні сторінки
+    form.addEventListener("submit", e => {
+      e.preventDefault();
+
+      const name = document.getElementById("name").value.trim();
+      const selectedInterests = [...document.querySelectorAll('input[name="interests"]:checked')]
+                                .map(el => el.value);
+
+      if (!name) {
+        alert("Введи ім'я!");
+        return;
+      }
+      if (selectedInterests.length === 0) {
+        alert("Оберіть хоча б один інтерес!");
+        return;
+      }
+
+      // Додаємо новий профіль у Realtime Database
+      const newProfileRef = db.ref("profiles").push();
+      newProfileRef.set({
+        name,
+        interests: selectedInterests,
+        createdAt: Date.now()
+      }, error => {
+        if (error) {
+          alert("Помилка збереження: " + error);
+        } else {
+          form.reset();
+          loadProfiles(selectedInterests);
+        }
+      });
+    });
+
+    // Показуємо всі профілі на початку (без фільтра)
     loadProfiles();
   </script>
 </body>
